--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="text/javascript" src="script.js"></script>
-    <link type="text/css" rel="stylesheet" href="estilo.css" >
+    <script type="text/javascript" src="App/script.js"></script>
+    <link type="text/css" rel="stylesheet" href="App/estilo.css" >
     <title>PUZZLE</title>
 </head>
 <body>
